tests/neg-macros/newClassExtendsOnlyTrait/Test_2.scala
import scala.language.experimental

def test: Foo = makeClass("foo") // error
